--- a/index.html
+++ b/index.html
@@ -8,10 +8,75 @@
 		<link rel="stylesheet" type="text/css" href="css/grid.css">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<!-- SEO -->
+		<meta name="description" content="This is my web journal.">
+		<meta name="author" content="Kevin Lahoda">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!--  Bookmark Icon-->
+		<link rel="icon" type="image/png" href="images/icon.png">
+		<!-- load google fonts -->
+		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,600;1,300;1,500&display=swap" rel="stylesheet">
+		<title>Plai Ravangpal : ARTS 486 Web Journal</title>
 	</head>
 
 	<body>
-		
-	</body>
+		<div id="wrapper">
+			<div id="masthead" class="grid">
+				<div id="topnav" class="width-12-12 width-12-12-m">
+					<ul>
+						<li>
+							<div id="logo">
+								<a href="/" title="Plai Ravangpal">
+	          			<h1>Plai Ravangpal</h1>
+	        			</a>
+      				</div>
+						</li>
+						<li><a href="about.html">About Me</a></li>
+					</ul>
+				</div>
+			</div>
 
-</html>
+			<div id="main" class="grid">
+	      <div id="intro" class="width-12-12-m width-12-12">
+	        <div id="intro-holder">
+	          <h1>Every adventure requires a first step.</h1>
+	        </div>
+	      </div>
+
+	           <div id="work" class="width-12-12-m width-12-12">
+	        <h3>Course Work</h3>
+	        <div id="work-holder" class="grid">
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
+	              <img title="Every Single Person" src="images/jojo.png" />
+	              <div class="work-inside">
+	                <h2>Project Title</h2>
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+	              </div>
+	            </a>
+	          </div>
+
+	          <div id="work-holder" class="grid">
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
+	              <img title="Every Single Person" src="images/jojo.png" />
+	              <div class="work-inside">
+	                <h2>Project Title</h2>
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+	              </div>
+	            </a>
+	          </div>
+
+	           <div id="work-holder" class="grid">
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
+	              <img title="Every Single Person" src="images/jojo.png" />
+	              <div class="work-inside">
+	                <h2>Project Title</h2>
+	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+	              </div>
+	            </a>
+	          </div
+
+			
+	
