--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	        <div id="work-holder" class="grid">
 	          <div class="width-12-12-m width-4-12 work-item">
 	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
-	              <img title="Every Single Person" src="images/jojo.png" />
+	              <img title="Every Single Person" src="images/iroh.jpg" />
 	              <div class="work-inside">
 	                <h2>Project Title</h2>
 	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
@@ -59,7 +59,7 @@
 	          <div id="work-holder" class="grid">
 	          <div class="width-12-12-m width-4-12 work-item">
 	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
-	              <img title="Every Single Person" src="images/jojo.png" />
+	              <img title="Every Single Person" src="images/iroh.jpg" />
 	              <div class="work-inside">
 	                <h2>Project Title</h2>
 	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
@@ -70,7 +70,7 @@
 	           <div id="work-holder" class="grid">
 	          <div class="width-12-12-m width-4-12 work-item">
 	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
-	              <img title="Every Single Person" src="images/jojo.png" />
+	              <img title="Every Single Person" src="images/iroh.jpg" />
 	              <div class="work-inside">
 	                <h2>Project Title</h2>
 	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
