--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!-- HTML -->
-
+	
 <!DOCTYPE html>
 <html>
 	<head>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+		<!-- scripts -->
 		<script src="js/main.js"></script>
+		<!-- styles -->
 		<link rel="stylesheet" type="text/css" href="css/grid.css">
 		<link rel="stylesheet" type="text/css" href="css/reset.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<!-- SEO -->
 		<meta name="description" content="This is my web journal.">
-		<meta name="author" content="Kevin Lahoda">
+		<meta name="author" content="Plai Ravangpal">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!--  Bookmark Icon-->
 		<link rel="icon" type="image/png" href="images/icon.png">
 		<!-- load google fonts -->
-		<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,600;1,300;1,500&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200&display=swap" rel="stylesheet">
 		<title>Plai Ravangpal : ARTS 486 Web Journal</title>
 	</head>
 
@@ -26,7 +28,8 @@
 					<ul>
 						<li>
 							<div id="logo">
-								<a href="/" title="Plai Ravangpal">
+								<a href="index.html" title="Plai Ravangpal">
+	     
 	          			<h1>Plai Ravangpal</h1>
 	        			</a>
       				</div>
@@ -35,48 +38,55 @@
 					</ul>
 				</div>
 			</div>
-
 			<div id="main" class="grid">
 	      <div id="intro" class="width-12-12-m width-12-12">
 	        <div id="intro-holder">
-	          <h1>Every adventure requires a first step.</h1>
+	          <h1>Life happens wherever you are, whether you make it happen or not. - Uncle Iroh
+</h1>
+<p></p>
 	        </div>
 	      </div>
-
-	           <div id="work" class="width-12-12-m width-12-12">
-	        <h3>Course Work</h3>
+	      <div id="work" class="width-12-12-m width-12-12">
+	        <h3>Culminated Work</h3>
 	        <div id="work-holder" class="grid">
 	          <div class="width-12-12-m width-4-12 work-item">
-	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
-	              <img title="Every Single Person" src="images/iroh.jpg" />
+	            <a class="inner" href="university.html" title="Hell Yes">
+	              <img title="Aang" src="images/CardsMockUp.png" />
 	              <div class="work-inside">
-	                <h2>Project Title</h2>
-	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
+	                <h2>University Portfolio</h2>
+	                <p>While it is best to believe in oneself, a little help from others can be a great blessing. </p>
+	              </div>
+	            </a>
+	          </div>
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="personal.html" title="Hell Yes">
+	              <img title="Iroh" src="images/JoeyCollage.png" />
+	              <div class="work-inside">
+	                <h2>Personal Projects</h2>
+	                <p>It's important to draw wisdom from many different places.</p>
+	              </div>
+	            </a>
+	          </div>
+	          <div class="width-12-12-m width-4-12 work-item">
+	            <a class="inner" href="media.html" title="Hell Yes">
+	              <img title="Zuko" src="images/skeleton.jpg" />
+	              <div class="work-inside">
+	                <h2>Mixed Media</h2>
+	                <p>Power and perfection are overrated ... Choose happiness, and love.</p>
 	              </div>
 	            </a>
 	          </div>
 
-	          <div id="work-holder" class="grid">
-	          <div class="width-12-12-m width-4-12 work-item">
-	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
-	              <img title="Every Single Person" src="images/iroh.jpg" />
-	              <div class="work-inside">
-	                <h2>Project Title</h2>
-	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
-	              </div>
-	            </a>
-	          </div>
+	        <div>
+	      </div>
+    	</div>
+			<div id="footer" class="grid">
+	      <div class="width-12-12-m width-12-12">
+	        <p>Copyright ©2022 · Plai Ravangpal</p>
+	      </div>
+    </div>
+		</div>
+	</body>
 
-	           <div id="work-holder" class="grid">
-	          <div class="width-12-12-m width-4-12 work-item">
-	            <a class="inner" href="portfolio-single.html" title="Hell Yes">
-	              <img title="Every Single Person" src="images/iroh.jpg" />
-	              <div class="work-inside">
-	                <h2>Project Title</h2>
-	                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras interdum posuere nisi.</p>
-	              </div>
-	            </a>
-	          </div
-
-			
-	
+</html>
+© 2022 GitHub, Inc.
