--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	            <a class="inner" href="personal.html" title="Hell Yes">
 	              <img title="Iroh" src="images/JoeyCollage.png" />
 	              <div class="work-inside">
-	                <h2>Personal Projects</h2>
+	                <h2>Project Brief</h2>
 	                <p>It's important to draw wisdom from many different places.</p>
 	              </div>
 	            </a>
@@ -71,7 +71,7 @@
 	            <a class="inner" href="media.html" title="Hell Yes">
 	              <img title="Zuko" src="images/skeleton.jpg" />
 	              <div class="work-inside">
-	                <h2>Mixed Media</h2>
+	                <h2>Storyboard</h2>
 	                <p>Power and perfection are overrated ... Choose happiness, and love.</p>
 	              </div>
 	            </a>
