--- a/index.html
+++ b/index.html
@@ -51,28 +51,28 @@
 	        <div id="work-holder" class="grid">
 	          <div class="width-12-12-m width-4-12 work-item">
 	            <a class="inner" href="university.html" title="Hell Yes">
-	              <img title="Aang" src="images/CardsMockUp.png" />
+	              <img title="Portfolio" src="images/CardsMockUp.png" />
 	              <div class="work-inside">
-	                <h2>University Portfolio</h2>
-	                <p>While it is best to believe in oneself, a little help from others can be a great blessing. </p>
+	                <h2>Project Portfolio</h2>
+	                <p>A collection of my past projects and mock ups.</p>
 	              </div>
 	            </a>
 	          </div>
 	          <div class="width-12-12-m width-4-12 work-item">
 	            <a class="inner" href="personal.html" title="Hell Yes">
-	              <img title="Iroh" src="images/JoeyCollage.png" />
+	              <img title="Art" src="images/JoeyCollage.png" />
 	              <div class="work-inside">
-	                <h2>Project Brief</h2>
-	                <p>It's important to draw wisdom from many different places.</p>
+	                <h2>Personal Work</h2>
+	                <p>A collection of personal art that I've made.</p>
 	              </div>
 	            </a>
 	          </div>
 	          <div class="width-12-12-m width-4-12 work-item">
 	            <a class="inner" href="media.html" title="Hell Yes">
-	              <img title="Zuko" src="images/skeleton.jpg" />
+	              <img title="Plai" src="images/skeleton.jpg" />
 	              <div class="work-inside">
-	                <h2>Storyboard</h2>
-	                <p>Power and perfection are overrated ... Choose happiness, and love.</p>
+	                <h2>About me</h2>
+	                <p>All about me and the work that I do!</p>
 	              </div>
 	            </a>
 	          </div>
