--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	              <img title="Portfolio" src="images/CardsMockUp.png" />
 	              <div class="work-inside">
 	                <h2>Project Portfolio</h2>
-	                <p>A collection of my past projects and mock ups.</p>
+	                <p>A collection of my past projects.</p>
 	              </div>
 	            </a>
 	          </div>
